--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,4 +2,5 @@ authors:
   famulare:
     name: Mike Famulare
     description: Creator
+    github: famulare
     avatar: https://github.com/famulare.png
