--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+annotated-types==0.7.0
 babel==2.17.0
 backrefs==5.8
+bracex==2.5.post1
 cachecontrol==0.14.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -15,6 +17,7 @@ markdown==3.7
 markupsafe==3.0.2
 mergedeep==1.3.4
 mkdocs==1.6.1
+mkdocs-awesome-nav==3.0.0
 mkdocs-get-deps==0.2.0
 mkdocs-git-committers-plugin-2==2.5.0
 mkdocs-git-revision-date-localized-plugin==1.4.4
@@ -23,10 +26,13 @@ mkdocs-material-extensions==1.3.1
 mkdocs-open-in-new-tab==1.0.8
 mkdocs-rss-plugin==1.17.1
 msgpack==1.1.0
+natsort==8.4.0
 packaging==24.2
 paginate==0.5.7
 pathspec==0.12.1
 platformdirs==4.3.6
+pydantic==2.10.6
+pydantic-core==2.27.2
 pygments==2.19.1
 pymdown-extensions==10.14.3
 python-dateutil==2.9.0.post0
@@ -36,5 +42,7 @@ pyyaml-env-tag==0.1
 requests==2.32.3
 six==1.17.0
 smmap==5.0.2
+typing-extensions==4.12.2
 urllib3==2.3.0
 watchdog==6.0.0
+wcmatch==10.0
