first pass at adding utteranc.es comments - https://utteranc.es/ - https://squidfunk.github.io/mkdocs-material/setup/adding-a-comment-system/ - https://squidfunk.github.io/mkdocs-material/customization/#overriding-partials
I don't know how to preview locally, so YOLO deploy

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ extra_css:
 plugins:
   - awesome-nav
   - search
+  - meta
   - blog:
       post_readtime: TRUE
   - rss: 
@@ -28,6 +29,7 @@ plugins:
   
 theme: 
   name: material
+  custom_dir: overrides
   favicon: img/favicon.ico
   logo: img/IDM_white.png
   icon:
