--- a/scratch/.gitignore
+++ b/scratch/.gitignore
@@ -3,3 +3,4 @@ output_cache copy.RData
 output_cache_VE.RData
 output_cache_flat.RData
 output_cache_flat_highdose.RData
+output_cache_VE_highdose.RData
